[gd_scene load_steps=7 format=3 uid="uid://6h4fmy3os62g"]

[ext_resource type="Theme" uid="uid://b1yxrvsf4tcak" path="res://assets/ui_theme.tres" id="1_vybe3"]
[ext_resource type="PackedScene" uid="uid://4gac288bd5mt" path="res://src/ui/change_scene_button.tscn" id="2_8n8w0"]
[ext_resource type="Script" path="res://src/ui/hud.gd" id="2_u304w"]
[ext_resource type="PackedScene" uid="uid://bdynbv6ietslw" path="res://src/ui/quit_button.tscn" id="3_648ym"]
[ext_resource type="PackedScene" uid="uid://dsrldc1p2ftcv" path="res://src/ui/retry_button.tscn" id="3_jj5we"]
[ext_resource type="Texture2D" uid="uid://dxnaaq0j8epb4" path="res://assets/coin.png" id="3_ubeq0"]

[node name="Hud" type="Control"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_vybe3")
script = ExtResource("2_u304w")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 22.0
offset_right = -25.0
offset_bottom = 81.0
grow_horizontal = 0
color = Color(0, 0, 0, 0.25098)
metadata/_edit_layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
offset_left = 9.0
offset_right = 57.0
offset_bottom = 48.0
size_flags_vertical = 4
texture = ExtResource("3_ubeq0")
ignore_texture_size = true
stretch_mode = 5

[node name="CoinsLabel" type="Label" parent="ColorRect/HBoxContainer"]
offset_left = 67.0
offset_top = 7.0
offset_right = 114.0
offset_bottom = 41.0
grow_horizontal = 0
text = "005"
metadata/_edit_layout_mode = 1

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.25098)

[node name="TitleLabel" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 122.0
offset_right = 114.0
offset_bottom = 156.0
grow_horizontal = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -114.0
offset_right = 121.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="RetryButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource("3_jj5we")]
offset_right = 242.0
offset_bottom = 73.0

[node name="PlayButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource("2_8n8w0")]
offset_top = 77.0
offset_right = 242.0
offset_bottom = 150.0
text = "Main Screen"
scene_path = "res://src/screens/main_screen.tscn"

[node name="QuitButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource("3_648ym")]
offset_top = 154.0
offset_right = 242.0
offset_bottom = 228.0
